--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-super-tabs/angular": "^6.1.3-alpha.1",
     "@ionic/angular": "^4.7.1",
     "cordova-android": "8.1.0",
+    "cordova-android-support-gradle-release": "^3.0.1",
     "cordova-ios": "5.1.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
@@ -71,7 +72,10 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-android-support-gradle-release": {
+        "ANDROID_SUPPORT_VERSION": "27.+"
+      }
     },
     "platforms": [
       "ios",
